--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,6 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -38,15 +35,21 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="I See">
+            android:label="Add Device's Number">
+        </activity>
+        <activity
+            android:name=".EditMainActivity"
+            android:label="Modification Device's Number">
+        </activity>
+        <activity
+            android:name=".FirstActivity"
+            android:label="I See"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".EditMainActivity"
-            android:label="Modification Device's Number">
         </activity>
     </application>
 
